parse graphical numerals and lists of numerals to string

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "bank kata",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --no-cache --watch ./*"
   },
   "repository": {
     "type": "git",
